--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,18 @@
     <string name="titulo_Inv2_des">Informações do Inversor</string>
     <string name="efici_inv_1">Rendimento do inversor:</string>
     <string name="_19">19%</string>
-    <string name="tensao_Saida_texto">Tensão de saída :</string>
+    <string name="tensao_Saida_texto">Tensão CA de saída :</string>
     <string name="_30V">30 V</string>
+    <string name="renogive">Renogive</string>
+    <string name="_3_kw_pico">3 kW(pico)</string>
+    <string name="_2">2</string>
+    <string name="_100_v">100 V</string>
+    <string name="_300_v">300 V</string>
+    <string name="_50">50 %</string>
+    <string name="_95">95 %</string>
+    <string name="_4">4%</string>
+    <string name="_1000v">1000V</string>
+    <string name="_9a">9A</string>
+    <string name="_60_hz">60 Hz</string>
     />
 </resources>
