--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -6,4 +6,10 @@
     <string name="txt_preco">Digite o valor da sua conta de energia mensal.</string>
     <string name="txt_obs_open">obs: Coloque o valor em reais</string>
     <string name="botao_open_txt">Seguir</string>
+    <string name="text_Peso_Inv">Peso do inversor :</string>
+    <string name="text_Area_inv">Area do inversor :</string>
+    <string name="_20_kg">20 kg</string>
+    <string name="_1_m">1 m²</string>
+    <string name="text_Garantia_preco">Garantia do inversor:</string>
+    <string name="_10_anos">10 Anos</string>
 </resources>
