--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,10 +46,11 @@
     <string name="text_Peso_Inv">Peso do inversor :</string>
     <string name="text_Area_inv">Area do inversor</string>
     <string name="_20_kg">20 kg</string>
-    <string name="_20_kg">20 kg</string>
     <string name="_1_m">1 m²</string>
     <string name="text_Garantia_preco">Garantia do inversor:</string>
     <string name="_10_anos">10 Anos</string>
+    <string name="text_preco_inv">Preço :</string>
+    <string name="r_2000_00">R$ 2000,00</string>
     <![CDATA[
 
     />
