Desenvolvendo o act CalculeAgoraInicio; Montando Spinner com valores estáticos;

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -25,4 +25,7 @@
     <string name="textTensaoMedia">Tensão média (DC) :</string>
     <string name="text_corrente_m_modulo_solar">Corrente média :</string>
     <string name="txtpesoModuloSolar">Peso :</string>
+    <string name="txtCalculeAgora">Calcule Agora</string>
+    <string name="txtEscolhaEquipamentos">Escolha quais equipamentos usar</string>
+    <string name="txttipodoModuloSolar">Escolha qual o seu Modulo Solar :</string>
 </resources>
