--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -28,4 +28,9 @@
     <string name="txtCalculeAgora">Calcule Agora</string>
     <string name="txtEscolhaEquipamentos">Escolha quais equipamentos usar</string>
     <string name="txttipodoModuloSolar">Escolha qual o seu Modulo Solar :</string>
+    <string name="digite_o_seu_e_mail">Digite o seu e-mail</string>
+    <string name="buttcadastrarInversor">Inversor</string>
+    <string name="txtButtonCadastroModulosSolares">Paineis</string>
+    <string name="logocerf">LogoCERF</string>
+    <string name="todo">TODO</string>
 </resources>
