App testado e funcionando;

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -33,4 +33,6 @@
     <string name="txtButtonCadastroModulosSolares">Paineis</string>
     <string name="logocerf">LogoCERF</string>
     <string name="todo">TODO</string>
+    <string name="modelo_do_inversor">Modelo do inversor</string>
+    <string name="bt_inversor">bt inversor</string>
 </resources>
