Update dos layout's das Activity dos inversores;

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -35,4 +35,6 @@
     <string name="todo">TODO</string>
     <string name="modelo_do_inversor">Modelo do inversor</string>
     <string name="bt_inversor">bt inversor</string>
+    <string name="imageminv">imagemInv</string>
+    <string name="salvar_dados">Salvar dados</string>
 </resources>
