--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,6 +72,8 @@
     <string name="todo">TODO</string>
     <string name="modelo_do_inversor">Modelo do inversor</string>
     <string name="bt_inversor">bt inversor</string>
+    <string name="imageminv">imagemInv</string>
+    <string name="salvar_dados">Salvar dados</string>
     <string-array name="modulosSolares">
         <item>225 wp</item>
         <item>275 wp</item>
