--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,6 +76,7 @@
     <string name="salvar_dados">Salvar dados</string>
     <string name="pot_ncia_maxima_de_entrada">Potência maxima de entrada :</string>
     <string name="tens_o_fase_neutro">Tensão Fase Neutro :</string>
+    <string name="cadastrar_modulo">Cadastrar Modulo</string>
     <string-array name="modulosSolares">
         <item>225 wp</item>
         <item>275 wp</item>
