--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -40,4 +40,5 @@
     <string name="pot_ncia_maxima_de_entrada">Potência maxima de entrada :</string>
     <string name="tens_o_fase_neutro">Tensão Fase Neutro :</string>
     <string name="cadastrar_modulo">Cadastrar Modulo</string>
+    <string name="loading_please_wait">Loading, Please Wait..</string>
 </resources>
