--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,6 +77,7 @@
     <string name="pot_ncia_maxima_de_entrada">Potência maxima de entrada :</string>
     <string name="tens_o_fase_neutro">Tensão Fase Neutro :</string>
     <string name="cadastrar_modulo">Cadastrar Modulo</string>
+    <string name="loading_please_wait">Loading, Please Wait..</string>
     <string-array name="modulosSolares">
         <item>225 wp</item>
         <item>275 wp</item>
