--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -41,4 +41,5 @@
     <string name="tens_o_fase_neutro">Tensão Fase Neutro :</string>
     <string name="cadastrar_modulo">Cadastrar Modulo</string>
     <string name="loading_please_wait">Loading, Please Wait..</string>
+    <string name="loading_please_wait2">Loading, Please Wait..</string>
 </resources>
